--- a/style.css
+++ b/style.css
@@ -105,10 +105,11 @@ p {
     width: 250px;
     height: 100vh;
     position: fixed;
-    right: 0;
+    right: -250px;
     top: 0;
     background: #f67c92;
     z-index: 2;
+    transition: .5s linear all;
 }
 
 nav ul li {
