--- a/css/responsive.css
+++ b/css/responsive.css
@@ -89,5 +89,15 @@
         width: 70px;
     }
 
+}
 
+@media only screen and (max-width: 1130px) and (min-width: 771px) {
+    #header p {
+        width: 93%;
+    }
+
+    h1 {
+        font-size: 25px;
+        width: 60%;
+    }
 }
