--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a {
 /* Header Section  Start*/
 #header {
     height: 100vh;
-    background-image: url(images/background.png);
+    background-image: url(../images/background.png);
     background-position: center;
     background-image: cover;
 }
